# Matrixplus

./: README_RUS.md
src/: .gitignore  CMakeLists.txt  Makefile  main_test.cpp  old_test.c  s21_matrix_oop.h
src/s21_matrix_oop/: s21_matrix_oop.cpp  s21_matrix_oop.h
src/s21_matrix_oop/definitions/: comparison.cpp  operators.cpp
src/s21_matrix_oop/sources/: arithmetic_operations.cpp  assign.cpp  constructors.cpp  matrix_operations.cpp  operators.cpp  other_methods.cpp
src/tests/: func_for_test.cpp  tests.h  tests_calccomplements.cpp  tests_constuctors.cpp  tests_determinant.cpp  tests_inversematrix.cpp  tests_methods.cpp  tests_methods_assign.cpp  tests_methods_eqmatrix.cpp  tests_methods_inversematrix.cpp  tests_methods_minor_matrix.cpp  tests_methods_multmatrix.cpp  tests_methods_multnumber.cpp  tests_methods_submatrix.cpp  tests_methods_summatrix.cpp  tests_methods_transpose.cpp  tests_operators.cpp  tests_operators_assign.cpp  tests_operators_eq.cpp  tests_operators_minus.cpp  tests_operators_mul.cpp  tests_operators_plus.cpp
